--- a/app/login.module.css
+++ b/app/login.module.css
@@ -1,30 +1,14 @@
-/* login.module.css */
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
   background-color: #f7f7f7;
 }
 
 .formContainer {
-  background-color: white;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 400px;
   text-align: center;
-}
-
-.logoContainer {
-  margin-bottom: 1.5rem;
-}
-
-.logoText {
-  margin-top: 0.5rem;
-  font-size: 1.2rem;
-  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
 }
 
 .form {
